classDiagram

%% application
    class TicketBoxApplication
    TicketBoxApplication --> TicketOrderController: TicketOrderRequest
    TicketBoxApplication --> PerformanceController: XXXPerformanceRequest
%% controller
    class TicketOrderController
    TicketOrderController --> TicketOrderService: TicketOrder

    class PerformanceController
    PerformanceController --> PerformanceService: PerformanceParam
%% service
    class TicketOrderService
    TicketOrderService --> TicketOrderRepository: TicketOrderEntity
    TicketOrderService --> TicketService: Ticket

    class TicketService
    TicketService --> TicketRepository

    class PerformanceService
    PerformanceService --> PerformanceRepository: Performance
%% persistence
    class TicketRepository
    TicketRepository --> tickets

    class TicketOrderRepository
    TicketOrderRepository --> ticket_orders

    class PerformanceRepository
    PerformanceRepository --> performances